Fixed issue 11016: 10 point array does not fit on tablet screen

--- a/templates/default/css/template.css
+++ b/templates/default/css/template.css
@@ -762,7 +762,12 @@ td.answer-item.text-center
 
 .table-10-point-array  td.answer-item.text-center
 {
-    padding-left: 52px;
+    padding-left: 40px;
+}
+
+.table-10-point-array  thead tr th.text-center
+{
+    padding-left: 0px;
 }
 
 
