--- a/templates/news_paper/css/template.css
+++ b/templates/news_paper/css/template.css
@@ -732,8 +732,14 @@ td.answer-item.text-center
 
 .table-10-point-array  td.answer-item.text-center
 {
-    padding-left: 52px;
+    padding-left: 40px;
 }
+
+.table-10-point-array  thead tr th.text-center
+{
+    padding-left: 0px;
+}
+
 
 
 /* center the label text in no more table mode */
